# chromium-ios-v2

./: .gitignore  .gn  BLINK_INTEGRATION.md  BUILD.gn  BUILDING.md  BUILD_IPA.md  COMPLETION_REPORT.md  CRASH_FIXES.md  ChromiumIOSv2.xcodeproj  ChromiumiOS.xcodeproj  ENGINE_INFO.md  FEATURES.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  QUICKREF.md  QUICKSTART.md  README.md  STATUS.md  TASK_COMPLETION.md  UI_PREVIEW.md  WEBKIT_CLARIFICATION.md  altstore-source.json  build-blink.sh  build.sh  validate.sh
.github/workflows/: build-ipa.yml  build.yml
ChromiumApp/: Entitlements.plist  ExportOptions.plist
ChromiumApp/ChromiumApp/: ChromiumApp-Bridging-Header.h  Info.plist  ViewController.swift
ChromiumApp/ChromiumApp.xcodeproj/: project.pbxproj
ChromiumApp/ChromiumApp/Base.lproj/: LaunchScreen.storyboard
ChromiumIOSv2/: AddressBarController.h  AddressBarController.m  AppDelegate.h  AppDelegate.m  BrowserViewController.h  BrowserViewController.m  ChromiumConfig.h  Info.plist  LaunchScreen.storyboard  Main.storyboard  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
ChromiumIOSv2.xcodeproj/: project.pbxproj
ChromiumIOSv2Tests/: AddressBarControllerTests.m
ChromiumiOS/: AddressBarView.swift  AppDelegate.swift  BrowserViewController.swift  ChromiumEngine.swift  Info.plist  LaunchScreen.storyboard  SceneDelegate.swift
Tests/: AddressBarTests.swift
ios/chrome/browser/web/: BUILD.gn  blink_web_view_bridge.h  blink_web_view_bridge.mm  blink_web_view_bridge_unittest.mm  blink_web_view_controller.h  blink_web_view_controller.mm  metal_compositor.h  metal_compositor.mm  web_state.h  web_state.mm
