# Copyright 2024 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Root BUILD.gn for Chromium iOS with Blink

import("//build/config/ios/ios_sdk.gni")

# Main group for the iOS Chrome app with Blink
group("chrome_public_bundle") {
  deps = [
    "//ios/chrome/browser/web:web",
    "//ios/chrome/app:chrome",
  ]
}

# iOS Chrome app target
group("chrome") {
  deps = [
    "//ios/chrome/browser/web:web",
    "//base",
    "//net",
    "//third_party/blink/public/web",
    "//third_party/blink/renderer/core",
    "//ui/gfx",
  ]
}

# All targets
group("all") {
  testonly = true
  deps = [
    ":chrome_public_bundle",
    "//ios/chrome/browser/web:unit_tests",
  ]
}

# Default target
group("default") {
  deps = [ ":chrome_public_bundle" ]
}
