# Copyright 2024 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/ios/ios_sdk.gni")
import("//build/config/ios/rules.gni")

# Main build target for iOS Chrome with Blink
group("web") {
  deps = [
    ":blink_web_view",
    ":web_state",
    ":compositor",
  ]
}

# Blink WebView integration for iOS
source_set("blink_web_view") {
  sources = [
    "blink_web_view_bridge.h",
    "blink_web_view_bridge.mm",
    "blink_web_view_controller.h",
    "blink_web_view_controller.mm",
  ]

  deps = [
    "//base",
    "//third_party/blink/public/web",
    "//third_party/blink/renderer/core",
    "//ui/gfx",
    "//ui/gfx/geometry",
  ]

  frameworks = [
    "UIKit.framework",
    "Metal.framework",
    "QuartzCore.framework",
  ]

  configs += [ "//build/config/ios:ios_shared_library_ldflags" ]
}

# Web state management
source_set("web_state") {
  sources = [
    "web_state.h",
    "web_state.mm",
  ]

  deps = [
    ":blink_web_view",
    "//base",
    "//net",
    "//url",
  ]
}

# Metal compositor for rendering Blink output
source_set("compositor") {
  sources = [
    "metal_compositor.h",
    "metal_compositor.mm",
  ]

  deps = [
    "//base",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//third_party/blink/public/platform",
  ]

  frameworks = [
    "Metal.framework",
    "QuartzCore.framework",
    "UIKit.framework",
  ]
}

# Unit tests
source_set("unit_tests") {
  testonly = true

  sources = [
    "blink_web_view_bridge_unittest.mm",
  ]

  deps = [
    ":blink_web_view",
    "//base/test:test_support",
    "//testing/gtest",
  ]
}
